# postgres-json

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  main.py  notebook.ipynb  pyproject.toml
scripts/: generate_data.py
